--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -17,9 +17,11 @@
                            formControlName="name"
                            >
 
-                    <span class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        error message
+                    <span class="form-text text-danger"
+                    *ngIf="isValidField('name')"
+                    >
+                        {{ getFieldError('name') }}
+                        
                     </span>
                 </div>
             </div>
