--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -21,7 +21,7 @@
                     *ngIf="isValidField('name')"
                     >
                         {{ getFieldError('name') }}
-                        
+
                     </span>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                            class="form-control"
                            formControlName="price"
                            placeholder="Precio del producto">
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('price')" class="form-text text-danger">
                         El precio debe de ser 0 o mayor
                     </span>
                 </div>
@@ -48,12 +48,11 @@
                            formControlName="inStorage"
                            placeholder="Existencias del producto">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
                          Las existencias deben de ser 0 o mayor
                     </span>
                 </div>
             </div>
-
 
             <div class="row">
                 <div class="col">
@@ -68,7 +67,6 @@
 
     </div>
 </div>
-
 
 <div class="row">
     <div class="col">
