--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
 
     <!-- Radio -->
     <div class="row mb-3">
@@ -11,9 +11,10 @@
 
             <div class="form-check">
                 <input class="form-check-input"
-                       type="radio"
-                       value="M"
-                       id="radioMasculino">
+                    formControlName="gender"
+                    type="radio"
+                    value="M"
+                    id="radioMasculino">
                 <label class="form-check-label" for="radioMasculino">
                   Masculino
                 </label>
@@ -21,9 +22,10 @@
 
             <div class="form-check">
                 <input class="form-check-input"
-                       type="radio"
-                       value="F"
-                       id="radioFemenino">
+                    formControlName="gender"
+                    type="radio"
+                    value="F"
+                    id="radioFemenino">
                 <label class="form-check-label" for="radioFemenino">
                   Femenino
                 </label>
@@ -39,8 +41,9 @@
 
             <div class="form-check form-switch mt-2">
                 <input class="form-check-input"
-                       type="checkbox"
-                       id="flexSwitchCheckChecked">
+                    formControlName="wantNotifications"
+                    type="checkbox"
+                    id="flexSwitchCheckChecked">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
 
@@ -53,13 +56,15 @@
         <div class="col-sm-9">
             <div class="form-check">
                 <input class="form-check-input"
-                       type="checkbox"
-                       id="flexCheckDefault">
+                    formControlName="termAndConditions"
+                    value="true"
+                    type="checkbox"
+                    id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                   Términos y condiciones de uso
                 </label>
               </div>
-              <span class="form-text text-danger">
+              <span *ngIf="getFieldError('termAndConditions')" class="form-text text-danger">
                  Debe de aceptar las condiciones de uso
               </span>
 
@@ -81,7 +86,7 @@
 
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 <br>
 
 <h5>Persona</h5>
@@ -89,7 +94,7 @@
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
